--- a/print/xetex/Makefile
+++ b/print/xetex/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.74 2018/04/28 20:19:12 wiz Exp $
+# $NetBSD: Makefile,v 1.75 2018/05/05 12:22:46 minskim Exp $
 
 DISTNAME=	texlive-20170524-source
 PKGNAME=	xetex-0.99997
@@ -45,6 +45,8 @@ CONFIGURE_ARGS+=	--with-system-libpng
 CONFIGURE_ARGS+=	--with-system-freetype2
 CONFIGURE_ARGS+=	--with-system-teckit
 CONFIGURE_ARGS+=	--with-system-icu
+CONFIGURE_ENV+=		FT2_CONFIG=pkg-config \
+			PKG_CONFIG=${TOOLS_CMD.pkg-config}
 
 CONFIGURE_DIRS=		libs/graphite2
 CONFIGURE_DIRS+=	libs/harfbuzz
