--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.755 2018/04/29 14:23:26 kamil Exp $
+# $NetBSD: Makefile,v 1.756 2018/05/05 23:59:35 maya Exp $
 #
 
 COMMENT=	System utilities
@@ -488,6 +488,7 @@ SUBDIR+=	rdiff-backup
 SUBDIR+=	rename
 SUBDIR+=	rfstool
 SUBDIR+=	riemann-client
+SUBDIR+=	ripgrep
 SUBDIR+=	rkflashtool
 SUBDIR+=	rmtrash
 SUBDIR+=	roller
