--- a/www/ruby-patron/Makefile
+++ b/www/ruby-patron/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.31 2018/04/29 21:32:08 adam Exp $
+# $NetBSD: Makefile,v 1.32 2018/05/06 02:26:34 taca Exp $
 
-DISTNAME=	patron-0.12.1
-PKGREVISION=	1
+DISTNAME=	patron-0.13.1
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
