--- a/devel/p5-File-HomeDir/Makefile
+++ b/devel/p5-File-HomeDir/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.26 2017/06/05 14:22:59 ryoon Exp $
+# $NetBSD: Makefile,v 1.27 2018/05/06 05:53:59 wiz Exp $
 
-DISTNAME=	File-HomeDir-1.002
+DISTNAME=	File-HomeDir-1.004
 PKGNAME=	p5-File-HomeDir-1.00.2
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=File/}
 
