--- a/devel/p5-Test-MockModule/Makefile
+++ b/devel/p5-Test-MockModule/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.18 2017/10/09 07:33:35 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2018/05/06 06:39:40 wiz Exp $
 
-DISTNAME=	Test-MockModule-0.13
+DISTNAME=	Test-MockModule-0.14
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5 net
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Test/}
@@ -10,9 +10,10 @@ HOMEPAGE=	http://search.cpan.org/dist/Test-MockModule/
 COMMENT=	Perl 5 module to override subroutines in a module for unit testing
 LICENSE=	gnu-gpl-v3
 
-# for make test
+# TEST_DEPENDS
 BUILD_DEPENDS+=	p5-Test-Pod-Coverage-[0-9]*:../../devel/p5-Test-Pod-Coverage
 BUILD_DEPENDS+=	p5-Test-Pod-[0-9]*:../../devel/p5-Test-Pod
+BUILD_DEPENDS+=	p5-Test-Warnings-[0-9]*:../../devel/p5-Test-Warnings
 BUILD_DEPENDS+=	p5-SUPER-[0-9]*:../../devel/p5-SUPER
 
 USE_LANGUAGES=		# empty
