--- a/sysutils/ruby-chef-zero/Makefile
+++ b/sysutils/ruby-chef-zero/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2017/09/18 04:34:43 taca Exp $
+# $NetBSD: Makefile,v 1.9 2018/09/23 16:28:59 taca Exp $
 
-DISTNAME=	chef-zero-13.1.0
+DISTNAME=	chef-zero-14.0.6
 CATEGORIES=	sysutils
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,12 +9,12 @@ COMMENT=	Simple fast-start in-memory Chef server
 LICENSE=	apache-2.0
 
 DEPENDS+=	${RUBY_PKGPREFIX}-ffi-yajl>=2.2<3:../../devel/ruby-ffi-yajl
-DEPENDS+=	${RUBY_PKGPREFIX}-mixlib-log>=1.6.0:../../devel/ruby-mixlib-log
+DEPENDS+=	${RUBY_PKGPREFIX}-mixlib-log>=2<3:../../devel/ruby-mixlib-log
 DEPENDS+=	${RUBY_PKGPREFIX}-uuidtools>=2.1<3:../../devel/ruby-uuidtools
 DEPENDS+=	${RUBY_PKGPREFIX}-hashie>=2.0.5<4.0:../../misc/ruby-hashie
 DEPENDS+=	${RUBY_PKGPREFIX}-rack>=2.0<3:../../www/ruby-rack
 
-RUBY_VERSIONS_ACCEPTED=	23 24	# www/ruby-rack
+RUBY_VERSIONS_ACCEPTED=	23 24 25	# www/ruby-rack
 RUBYGEM_OPTIONS+=	--format-executable
 
 pre-configure:
