--- a/www/ruby-capybara/Makefile
+++ b/www/ruby-capybara/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2018/05/06 02:24:54 taca Exp $
+# $NetBSD: Makefile,v 1.17 2018/09/23 16:50:34 taca Exp $
 
-DISTNAME=	capybara-3.0.3
+DISTNAME=	capybara-3.8.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel ruby www
 
@@ -13,10 +13,11 @@ DEPENDS+=	${RUBY_PKGPREFIX}-nokogiri>=1.8:../../textproc/ruby-nokogiri
 DEPENDS+=	${RUBY_PKGPREFIX}-mini_mime>=0.1.3:../../mail/ruby-mini_mime
 DEPENDS+=	${RUBY_PKGPREFIX}-rack16>=1.6.0:../../www/ruby-rack16
 DEPENDS+=	${RUBY_PKGPREFIX}-rack-test>=0.6.3:../../www/ruby-rack-test
-DEPENDS+=	${RUBY_PKGPREFIX}-xpath>=3.0:../../textproc/ruby-xpath
+DEPENDS+=	${RUBY_PKGPREFIX}-xpath>=3.1:../../textproc/ruby-xpath
 DEPENDS+=	${RUBY_PKGPREFIX}-addressable>=0:../../net/ruby-addressable
 
 USE_LANGUAGES=	# none
+RUBY_VERSIONS_ACCEPTED=	23 24 25
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
