--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.496 2018/09/20 13:48:55 adam Exp $
+# $NetBSD: Makefile,v 1.497 2018/09/23 20:05:29 bsiegert Exp $
 #
 
 COMMENT=	Programming languages
@@ -88,7 +88,6 @@ SUBDIR+=	ghc-bootstrap
 SUBDIR+=	ghc7
 SUBDIR+=	gnat_util
 SUBDIR+=	gnucobol
-SUBDIR+=	go
 SUBDIR+=	go-hcl
 SUBDIR+=	go110
 SUBDIR+=	go111
