--- a/www/heel/Makefile
+++ b/www/heel/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2018/03/17 14:46:45 taca Exp $
+# $NetBSD: Makefile,v 1.13 2018/09/24 01:21:53 taca Exp $
 
 DISTNAME=	heel-3.2.0
+PKGREVISION=	1
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -8,7 +9,7 @@ HOMEPAGE=	https://github.com/copiousfreetime/heel/
 COMMENT=	Static file web server based on Rack and Thin
 LICENSE=	modified-bsd
 
-DEPENDS+=	${RUBY_PKGPREFIX}-puma>=3.11.3<3.12:../../www/ruby-puma
+DEPENDS+=	${RUBY_PKGPREFIX}-puma>=3.11.3:../../www/ruby-puma
 DEPENDS+=	${RUBY_PKGPREFIX}-rack>=2.0<3:../../www/ruby-rack
 DEPENDS+=	${RUBY_PKGPREFIX}-coderay>=1.1<2:../../textproc/ruby-coderay
 DEPENDS+=	${RUBY_PKGPREFIX}-launchy>=2.4<3:../../misc/ruby-launchy
@@ -16,7 +17,8 @@ DEPENDS+=	${RUBY_PKGPREFIX}-mime-types>=3.1<4:../../mail/ruby-mime-types1
 
 CONFLICTS+=	ruby[1-9][0-9][0-9]-heel-[0-9]* heel-[0-9]*
 
-OVERRIDE_GEMSPEC+=	coderay>=0.8.260 launchy>=0.3.2 thin>=1.2
+OVERRIDE_GEMSPEC+=	coderay>=0.8.260 launchy>=0.3.2 thin>=1.2 \
+			puma>=3.11.3
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
