--- a/www/heel/Makefile
+++ b/www/heel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2018/09/24 01:21:53 taca Exp $
+# $NetBSD: Makefile,v 1.14 2018/09/24 02:28:58 taca Exp $
 
 DISTNAME=	heel-3.2.0
 PKGREVISION=	1
@@ -13,7 +13,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-puma>=3.11.3:../../www/ruby-puma
 DEPENDS+=	${RUBY_PKGPREFIX}-rack>=2.0<3:../../www/ruby-rack
 DEPENDS+=	${RUBY_PKGPREFIX}-coderay>=1.1<2:../../textproc/ruby-coderay
 DEPENDS+=	${RUBY_PKGPREFIX}-launchy>=2.4<3:../../misc/ruby-launchy
-DEPENDS+=	${RUBY_PKGPREFIX}-mime-types>=3.1<4:../../mail/ruby-mime-types1
+DEPENDS+=	${RUBY_PKGPREFIX}-mime-types>=3.1<4:../../mail/ruby-mime-types
 
 CONFLICTS+=	ruby[1-9][0-9][0-9]-heel-[0-9]* heel-[0-9]*
 
