--- a/net/freeradius-freetds/Makefile
+++ b/net/freeradius-freetds/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2018/04/17 22:29:45 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2018/09/25 12:16:36 jperkin Exp $
 
 PKGREVISION= 1
 .include "../../net/freeradius/Makefile.module"
@@ -8,6 +8,7 @@ COMMENT=		Free RADIUS FreeTDS support
 CATEGORIES=		net
 
 CONFIGURE_ARGS+=    --with-rlm_sql_freetds
+CONFIGURE_ARGS+=    --without-rlm_ldap
 
 do-install:
 	${INSTALL_LIB} ${WRKSRC}/build/lib/.libs/rlm_sql_freetds.so ${DESTDIR}${PREFIX}/lib
