--- a/net/freeradius-sqlite3/Makefile
+++ b/net/freeradius-sqlite3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2018/07/20 03:34:23 ryoon Exp $
+# $NetBSD: Makefile,v 1.7 2018/09/25 12:16:37 jperkin Exp $
 
 PKGREVISION= 2
 .include "../../net/freeradius/Makefile.module"
@@ -8,6 +8,7 @@ COMMENT=		Free RADIUS SQLite support
 CATEGORIES=		net
 
 CONFIGURE_ARGS+=    --with-rlm_sql_iodbc
+CONFIGURE_ARGS+=    --without-rlm_ldap
 
 do-install:
 	${INSTALL_LIB} ${WRKSRC}/build/lib/.libs/rlm_sql_sqlite.so ${DESTDIR}${PREFIX}/lib
