--- a/sysutils/u-boot-jetson-tk1/Makefile
+++ b/sysutils/u-boot-jetson-tk1/Makefile
@@ -1,7 +1,9 @@
-# $NetBSD: Makefile,v 1.1 2017/12/09 13:02:41 jmcneill Exp $
+# $NetBSD: Makefile,v 1.2 2018/09/25 21:49:20 jmcneill Exp $
 
 UBOOT_TARGET=		jetson-tk1
 UBOOT_CONFIG=		jetson-tk1_defconfig
 UBOOT_BIN=		u-boot u-boot-dtb.bin
+
+PKGREVISION=		1
 
 .include "../../sysutils/u-boot/u-boot-arm.mk"
