--- a/graphics/opencv/Makefile
+++ b/graphics/opencv/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.77 2018/04/16 14:34:39 wiz Exp $
+# $NetBSD: Makefile,v 1.78 2018/09/26 19:33:50 prlw1 Exp $
 
 DISTNAME=	opencv-3.4.1
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	graphics devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=opencv/}
 EXTRACT_SUFX=	.zip
