--- a/textproc/go-glob/Makefile
+++ b/textproc/go-glob/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2018/06/12 23:50:02 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2018/09/27 21:06:06 tnn Exp $
 
 DISTNAME=	glob-0.2.3
 PKGNAME=	go-${DISTNAME}
@@ -14,6 +14,11 @@ LICENSE=	mit
 
 GO_DIST_BASE=	${DISTNAME}
 GO_SRCPATH=	${HOMEPAGE:S,https://,,}
+
+REPLACE_INTERPRETER+=	bash
+REPLACE.bash.old=	.*/bin/bash
+REPLACE.bash.new=	${SH}
+REPLACE_FILES.bash=	bench.sh
 
 .include "../../lang/go/go-package.mk"
 .include "../../mk/bsd.pkg.mk"
