--- a/www/ruby-jekyll-seo-tag/Makefile
+++ b/www/ruby-jekyll-seo-tag/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2018/09/23 17:13:51 taca Exp $
+# $NetBSD: Makefile,v 1.3 2018/09/28 16:00:39 tnn Exp $
 
 DISTNAME=	jekyll-seo-tag-2.5.0
 CATEGORIES=	www
@@ -9,6 +9,8 @@ COMMENT=	Jekyll plugin to add metadata tags for SEO
 LICENSE=	mit
 
 #DEPENDS+=	${RUBY_PKGPREFIX}-jekyll>=3.3<4:../../www/ruby-jekyll
+
+RUBY_VERSIONS_ACCEPTED=	23 24 25
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
