--- a/www/ruby-jekyll-feed/Makefile
+++ b/www/ruby-jekyll-feed/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2018/09/23 17:13:09 taca Exp $
+# $NetBSD: Makefile,v 1.4 2018/09/28 16:01:32 tnn Exp $
 
 DISTNAME=	jekyll-feed-0.11.0
 CATEGORIES=	www
@@ -11,6 +11,8 @@ LICENSE=	mit
 #
 # gemspec says dependency, but this package is really part of jekyll.
 #DEPENDS+=	${RUBY_PKGPREFIX}-jekyll>=3.3<4:../../www/ruby-jekyll
+
+RUBY_VERSIONS_ACCEPTED=	23 24 25
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
