--- a/www/ruby-jekyll/Makefile
+++ b/www/ruby-jekyll/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2018/09/23 17:15:17 taca Exp $
+# $NetBSD: Makefile,v 1.31 2018/09/29 10:34:33 tnn Exp $
 
 DISTNAME=	jekyll-3.8.4
 CATEGORIES=	www
@@ -25,6 +25,8 @@ DEPENDS+=	${RUBY_PKGPREFIX}-safe_yaml>=1.0<2:../../textproc/ruby-safe_yaml
 DEPENDS+=	${RUBY_PKGPREFIX}-jekyll-minima>=2.1.1:../../www/ruby-jekyll-minima
 DEPENDS+=	${RUBY_PKGPREFIX}-jekyll-feed>=0.9.2:../../www/ruby-jekyll-feed
 DEPENDS+=       ${RUBY_PKGPREFIX}-bundler>=1.7:../../misc/ruby-bundler
+
+RUBY_VERSIONS_ACCEPTED=	23 24 25
 
 RUBYGEM_OPTIONS+=	--format-executable
 
