--- a/multimedia/ffmpeg4/Makefile.common
+++ b/multimedia/ffmpeg4/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.5 2018/09/25 09:39:56 wiz Exp $
+# $NetBSD: Makefile.common,v 1.6 2018/09/29 14:25:39 tnn Exp $
 # used by multimedia/ffmpeg4/Makefile
 # used by multimedia/ffplay4/Makefile
 
@@ -13,7 +13,7 @@ PATCHDIR=	${.CURDIR}/../../multimedia/ffmpeg4/patches
 
 USE_LANGUAGES=		c99
 USE_LIBTOOL=		yes
-USE_TOOLS+=		gmake pod2man perl
+USE_TOOLS+=		gmake pod2man perl pkg-config
 HAS_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--cc=${CC:Q}
 CONFIGURE_ARGS+=	--disable-debug
