--- a/devel/libuv/Makefile
+++ b/devel/libuv/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.38 2018/08/19 18:12:22 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2018/10/01 17:43:48 adam Exp $
 
-DISTNAME=	libuv-1.23.0
+DISTNAME=	libuv-1.23.1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=libuv/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
