--- a/devel/py-wheel/Makefile
+++ b/devel/py-wheel/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.8 2018/05/16 10:24:05 adam Exp $
+# $NetBSD: Makefile,v 1.9 2018/10/03 11:33:07 adam Exp $
 
-DISTNAME=	wheel-0.31.1
+DISTNAME=	wheel-0.32.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=w/wheel/}
 
 MAINTAINER=	kamelderouiche@yahoo.com
-HOMEPAGE=	https://bitbucket.org/pypa/wheel/
+HOMEPAGE=	https://github.com/pypa/wheel
 COMMENT=	Built-package format for Python
 LICENSE=	mit
 
