--- a/emulators/libretro-mupen64plus/Makefile
+++ b/emulators/libretro-mupen64plus/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2018/10/02 21:09:29 nia Exp $
+# $NetBSD: Makefile,v 1.14 2018/10/03 15:01:10 nia Exp $
 
 DISTNAME=	libretro-mupen64plus-20180628
+PKGREVISION=	1
 CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_GITHUB:=libretro/}
 GITHUB_PROJECT=	mupen64plus-libretro
