--- a/sysutils/hivex/Makefile
+++ b/sysutils/hivex/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2018/10/03 20:09:00 tnn Exp $
+# $NetBSD: Makefile,v 1.2 2018/10/03 21:57:37 tnn Exp $
 
 DISTNAME=	hivex-1.3.15
 CATEGORIES=	sysutils
@@ -26,8 +26,17 @@ CONFIGURE_ARGS+=	--without-readline
 
 REPLACE_SH+=		sh/hivexget
 
+.include "../../mk/bsd.prefs.mk"
+
+PLIST_VARS+=	tools
+.if ${OPSYS} == "Darwin" || ${OPSYS} == "SunOS"
+CONFIGURE_ENV+=	ac_cv_func_open_memstream=no
+.else
+PLIST.tools=yes
 .include "../../archivers/xz/buildlink3.mk"
-.include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../textproc/libxml2/buildlink3.mk"
+.endif
+
+.include "../../converters/libiconv/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
