--- a/emulators/retroarch/Makefile
+++ b/emulators/retroarch/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2018/09/06 09:33:38 nia Exp $
+# $NetBSD: Makefile,v 1.11 2018/10/03 23:31:06 nia Exp $
 
 PKGNAME=	retroarch-${RETROARCH_VERSION}
 DISTNAME=	RetroArch-${RETROARCH_VERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_GITHUB:=libretro/RetroArch/releases/download/v${RETROARCH_VERSION}/}
 EXTRACT_SUFX=	.tar.xz
@@ -49,4 +49,5 @@ CONFIGURE_ARGS+=	--disable-thread_storage
 .include "../../audio/flac/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../net/miniupnpc/buildlink3.mk"
+.include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
