--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1228 2018/10/07 12:54:24 schmonz Exp $
+# $NetBSD: Makefile,v 1.1229 2018/10/08 14:48:46 adam Exp $
 #
 
 COMMENT=	Networking tools
@@ -649,6 +649,7 @@ SUBDIR+=	py-dnsdiag
 SUBDIR+=	py-dpkt
 SUBDIR+=	py-dropbox
 SUBDIR+=	py-eventlib
+SUBDIR+=	py-flower
 SUBDIR+=	py-foolscap
 SUBDIR+=	py-gandi.cli
 SUBDIR+=	py-gcs-oauth2-boto-plugin
