--- a/misc/libcdio/Makefile
+++ b/misc/libcdio/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.56 2018/08/22 09:45:43 wiz Exp $
+# $NetBSD: Makefile,v 1.57 2018/10/08 16:08:49 gdt Exp $
 
-DISTNAME=	libcdio-0.93
-PKGREVISION=	5
+DISTNAME=	libcdio-0.94
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GNU:=libcdio/}
-EXTRACT_SUFX=	.tar.bz2
+EXTRACT_SUFX=	.tar.gz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.gnu.org/software/libcdio/
@@ -23,6 +22,8 @@ PKGCONFIG_OVERRIDE+=	libudf.pc.in
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--without-versioned-libs
 INFO_FILES=		yes
+
+TEST_TARGET=		check
 
 .include "../../audio/libcddb/buildlink3.mk"
 .include "../../devel/ncurses/buildlink3.mk"
