--- a/misc/libcdio/Makefile
+++ b/misc/libcdio/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.57 2018/10/08 16:08:49 gdt Exp $
+# $NetBSD: Makefile,v 1.58 2018/10/08 16:12:34 gdt Exp $
 
-DISTNAME=	libcdio-0.94
+DISTNAME=	libcdio-1.1.0
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GNU:=libcdio/}
-EXTRACT_SUFX=	.tar.gz
+EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.gnu.org/software/libcdio/
